--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -20,13 +20,17 @@ OBJS+=$(WORKDIR)/hankaku.o
 .PRECIOUS: $(WORKDIR)/%.o $(WORKDIR)/%.bin
 
 DEVENV=../external/mikanos-build/devenv
+EDK2DIR=../external/edk2/
 CPPFLAGS=\
     -I. \
     -I$(DEVENV)/x86_64-elf/include/c++/v1 \
     -I$(DEVENV)/x86_64-elf/include \
     -I$(DEVENV)/x86_64-elf/include \
     -I$(DEVENV)/x86_64-elf/include/freetype2 \
-    -nostdlibinc -D__ELF__ -D_LDBL_EQ_DBL -D_GNU_SOURCE -D_POSIX_TIMERS
+    -I$(EDK2DIR)/MdePkg/Include \
+    -I$(EDK2DIR)/MdePkg/Include/X64 \
+    -nostdlibinc -D__ELF__ -D_LDBL_EQ_DBL -D_GNU_SOURCE -D_POSIX_TIMERS \
+    -DEFIAPI='__attribute__((ms_abi))'
 CFLAGS=\
     -O2 -Wall -g --target=x86_64-elf -ffreestanding -mno-red-zone \
     --std=c17
